--- a/html5up-forty/landing.html
+++ b/html5up-forty/landing.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+						<a href="index.html" class="logo"><strong>VisCommerce</strong> <span></span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -48,11 +48,11 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Landing</h1>
+								<h1>Features</h1>
 							</header>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet nullam consequat<br />
-								sed veroeros. tempus adipiscing nulla.</p>
+								<!-- <p>Lorem ipsum dolor sit amet nullam consequat<br />
+								sed veroeros. tempus adipiscing nulla.</p> -->
 							</div>
 						</div>
 					</section>
@@ -61,27 +61,79 @@
 					<div id="main">
 
 						<!-- One -->
-							<section id="one">
+							<!-- <section id="one">
 								<div class="inner">
 									<header class="major">
 										<h2>Sed amet aliquam</h2>
 									</header>
 									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
 								</div>
-							</section>
+							</section> -->
 
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/pic08.jpg" alt="" data-position="center center" />
+										<img src="images/feature1.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Orci maecenas</h3>
+												<h3>eStore3D</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p><ul class="timeline-points">
+                                                <h4>3D Experience</h4>
+                                                <li>
+                                                    Experience sale-items in 3D with operations such as Zoom, Rotate.
+                                                </li>
+                                            </ul>
+                                            <!-- <ul class="timeline-points">
+                                                <h4>Customize Appearance</h4>
+                                                <li>
+
+                                                    Customize Sofas, Chairs with different colors and textures of
+                                                    materials
+                                                    such as
+                                                    cloth,
+                                                    leather etc.
+                                                </li>
+                                            </ul> -->
+                                            <!-- <ul class="timeline-points">
+                                                <h4>Light controls</h4>
+                                                <li>
+                                                    Experience lamps with controls for on/off, intensity and color.
+                                                </li>
+                                            </ul>
+
+                                            <ul class="timeline-points">
+                                                <h4>Animation</h4>
+                                                <li>
+                                                    Tryout moving parts such as “cabinet doors” with 3D animation.
+                                                </li>
+                                            </ul>
+
+                                            <ul class="timeline-points">
+                                                <h4>InScene & Standalone</h4>
+                                                <li>
+                                                    Visualize sale-items individually and in context i.e InScene.
+                                                </li>
+                                            </ul>
+
+                                            <ul class="timeline-points">
+                                                <h4>Download</h4>
+                                                <li>
+                                                    Download 3D models of sale-items and insert into eSpace3D App.
+                                                </li>
+
+                                                <li>
+                                                    Enables users to “design” their spaces from the comfort of their own
+                                                    home.
+                                                </li>
+
+                                                <li>
+                                                    Users experience greater satisfaction and lower cost.
+                                                </li>
+                                            </ul></p> -->
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
@@ -90,21 +142,109 @@
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/pic09.jpg" alt="" data-position="top center" />
+										<img src="images/features2.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Rhoncus magna</h3>
+												<h3>eSpace3D
+                                                    App</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-											<ul class="actions">
+											<p><ul class="timeline-points">
+                                                <h4>Scale accurate 3D model</h4>
+                                                <li>
+                                                    Shoot pictures of your space using an ordinary smartphone and upload
+                                                    to
+                                                    eSpace3D App.
+                                                </li>
+                                                <!-- <li>
+                                                    A scale-accurate 3D model will be reconstructed using state of the
+                                                    art
+                                                    AI & 3D technology.
+                                                </li>
+                                                <li>
+                                                    A “digital twin” of your space will be provided to enable a
+                                                    try-n-buy
+                                                    experience in designing your space.
+                                                </li>
+                                                <li>
+                                                    It could be “Living Room” or a “Dentist Office”.
+                                                </li>
+                                            </ul>
+                                            <ul class="timeline-points">
+                                                <h4>Furniture</h4>
+                                                <li>
+                                                    Scale accurate 3D models of Sofas, Chairs, Tables, Lamps can be
+                                                    downloaded from eStore3D.
+                                                </li>
+                                                <li>
+                                                    Downloaded models can be inserted into eSpace3D App. Design your space
+                                                    to
+                                                    your liking.
+                                                </li>
+                                            </ul>
+                                            <ul class="timeline-points">
+                                                <h4>Paints, Tiles</h4>
+                                                <li>
+                                                    Palettes of Paints and Tiles can be downloaded from eStore3D.
+                                                </li>
+                                                <li>
+                                                    Apply to Walls, Floors etc.
+                                                </li>
+                                            </ul>
+
+                                            <ul class="timeline-points">
+                                                <h4>Lighting controls</h4>
+                                                <li>
+                                                    Download lamps from eStore3D and insert into eSpace3D App.
+                                                </li>
+                                                <li>
+                                                    Control lights via On/Off Switch & Intensity to your liking.
+                                                </li>
+                                            </ul>
+
+                                            <ul class="timeline-points">
+                                                <h4>Save / Open</h4>
+                                                <li>
+                                                    You can save the state of eSpace3D App into any file and re-open later.
+                                                </li>
+                                            </ul>
+
+                                            <ul class="timeline-points">
+                                                <h4>Transforms</h4>
+                                                <li>
+                                                    Move, Rotate & Scale any object (e.g Sofa).
+                                                </li>
+                                            </ul>
+
+                                            <ul class="timeline-points">
+                                                <h4>Scene Controls</h4>
+                                                <li>
+                                                    Zoom, Pan, Rotate the overall Scene.
+                                                </li>
+                                            </ul>
+
+                                            <ul class="timeline-points">
+                                                <h4>Undo / Redo</h4>
+                                                <li>
+                                                    Coming soon.
+                                                </li>
+                                            </ul>
+
+                                            <ul class="timeline-points">
+                                                <h4>Photorealistic renders</h4>
+                                                <li>
+                                                    Coming soon.
+                                                </li>
+                                            </ul> -->
+										</p>
+											<ul class="actions" >
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
-								<section>
+								<!-- <section>
 									<a href="generic.html" class="image">
 										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
 									</a>
@@ -119,11 +259,11 @@
 											</ul>
 										</div>
 									</div>
-								</section>
+								</section> -->
 							</section>
 
 						<!-- Three -->
-							<section id="three">
+							<!-- <section id="three">
 								<div class="inner">
 									<header class="major">
 										<h2>Massa libero</h2>
@@ -133,7 +273,7 @@
 										<li><a href="generic.html" class="button next">Get Started</a></li>
 									</ul>
 								</div>
-							</section>
+							</section> -->
 
 					</div>
 
