--- a/html5up-forty/generic copy.html
+++ b/html5up-forty/generic copy.html
@@ -46,25 +46,29 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Grow revenue by more than 100%?</h1>
+										<h1> Acquire customers for life?</h1>
 									</header>
-									<span class="image main"><img src="images/benefits (1).png" alt="" /></span>
+									<span class="image main"><img src="images/benefits (2).jpg" alt="" /></span>
 									
 								<div class="generic-maincontainer">
 									<div class="generic-container">
-										<img src="./images/Picture1.jpg" alt="">
-										<p>11 x the ratio of visitors who view 
-											3D models who buy compared to those who don’t. 
+										<img src="./images/Picture5.jpg" alt="">
+										<p>Digital-twin via re-constructed 3D models used for interior-designing.
 											</p>
 									</div>
 									<div class="generic-container">
-										<img src="./images/Picture4.png" alt="">
-										<p>Leveraging 3D and AR can increase conversion by up to 250%. 
+										<img src="./images/Picture6.png" alt="">
+										<p>Digital-twin via re-constructed 3D models used for sales. 
 											</p>
 									</div>
 									<div class="generic-container">
-										<img src="./images/Picture3.jpg" alt="">
-										<p>We believe that 3D will be ubiquitous in the coming years. 
+										<img src="./images/Picture7.png" alt="">
+										<p>66% of consumers say content that isn’t personalized would stop them from making a purchase	. 
+											</p>
+									</div>
+									<div class="generic-container">
+										<img src="./images/Picture8.png" alt="">
+										<p>84% of consumers say being treated like a person, is very important to winning their business. 
 											</p>
 									</div>
 								</div>
