--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -161,21 +161,21 @@
 			<div class="benefits-container">
 				<div class="box1" id="one">
 					<img src="images/benefits__1 (1).png" alt="">
-					<h3>Grow revenue by more than 100%?</h3>
+					<h3>Grow <span>revenue</span>  by more than <span>100%</span> ?</h3>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-					<button onclick="window.location.href='generic.html'">Read More</button>
+					<button style="max-width: 70%; margin: auto;" onclick="window.location.href='generic.html'">Read More</button>
 				</div>
 				<div class="box1" id="two">
 					<img src="images/benefits__1 (2).png" alt="">
-					<h3>Acquire customers for life??</h3>
+					<h3> Acquire <span>customers</span>  for <span>life</span> ?</h3>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-					<button onclick="window.location.href='generic.html'">Read More</button>
+					<button style="max-width: 70%; margin: auto;" onclick="window.location.href='generic copy.html'">Read More</button>
 				</div>
 				<div class="box1" id="three">
 					<img src="images/benefits__1 (3).png" alt="">
-					<h3>Sell big-ticket items easily?</h3>
+					<h3>  Sell <span>big-ticket</span>  items <span>easily</span> ?</h3>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-					<button onclick="window.location.href='generic.html'">Read More</button>
+					<button style="max-width: 70%; margin: auto;" onclick="window.location.href='generic copy 2.html'">Read More</button>
 				</div>	
 			</div>
 			
