--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -121,7 +121,7 @@
 						<img src="images/pic03.jpg" alt="" />
 					</span>
 					<header class="major">
-						<h3><a href="landing.html" class="link">Magna</a></h3>
+						<h3><a href="landing1.html" class="link">Magna</a></h3>
 						<p>Lorem etiam nullam</p>
 					</header>
 				</article> 
@@ -130,7 +130,7 @@
 						<img src="images/pic04.jpg" alt="" />
 					</span>
 					<header class="major">
-						<h3><a href="landing.html" class="link">Ipsum</a></h3>
+						<h3><a href="landing2.html" class="link">Ipsum</a></h3>
 						<p>Nisl sed aliquam</p>
 					</header>
 				</article>
