--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -121,8 +121,15 @@
 						<img src="images/pic03.jpg" alt="" />
 					</span>
 					<header class="major">
-						<h3><a href="landing1.html" class="link">Magna</a></h3>
-						<p>Lorem etiam nullam</p>
+						<!-- <h3><a href="landing1.html" class="link">Magna</a></h3>
+						<p>Lorem etiam nullam</p> -->
+						<div class="video-container2">
+
+							<iframe id="yt-video2" width="560" height="315" src="https://www.youtube.com/embed/UzY1zunhZjI"
+								title="YouTube video player" frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+						</div>
 					</header>
 				</article> 
 				<article>
@@ -130,7 +137,7 @@
 						<img src="images/pic04.jpg" alt="" />
 					</span>
 					<header class="major">
-						<h3><a href="landing2.html" class="link">Ipsum</a></h3>
+						<h3><a href="landing1.html" class="link">Ipsum</a></h3>
 						<p>Nisl sed aliquam</p>
 					</header>
 				</article>
