--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -66,7 +66,7 @@
 			<h1 style="text-align: center; margin-top: 2%;">Why VisCommerce?</h1>
 			<div class="benefits-container" style="margin-bottom: 3%;">
 				<div class="box1" id="one">
-					<img src="images/benefits__1 (1).png" alt="">
+					<img src="images/Going up-cuate (2).png" alt="">
 					<h3>Grow <span>revenue</span>  by more than <span>100%</span> ?</h3>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
 					<!-- <button style="max-width: 70%; margin: auto;" ><a href="#menu">More</a> </button> -->
