--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -12,7 +12,7 @@
 	</noscript>
 </head>
 
-<body class="is-preload" >
+<body class="is-preload">
 
 	<!-- Wrapper -->
 	<div id="wrapper">
@@ -41,73 +41,75 @@
 
 
 		<!-- Banner -->
-		<section id="banner" class="major" >
+		<section id="banner" class="major">
 			<div class="inner top-container">
-				<header class="major">
+				<header class="major main-heading">
 					<!-- <h1>Welcome to VisCommerce</h1> -->
-					<h1>Welcome to <br> 
-						<span
-							 class="txt-rotate"
-							 data-period="2000"
-							 data-rotate='["VisCommerce", "VisualisingCommerce"]'></span></h1>
+					<h1>Welcome to <br>
+						<span class="txt-rotate" data-period="2000"
+							data-rotate='["VisCommerce", "VisualisingCommerce"]'></span>
+					</h1>
 
 				</header>
-
+				<video class="viscom-video" src="videos/User Experience @ VisCommerce.mp4" muted loop autoplay></video>
 			</div>
 
 			<!-- <iframe width="560" height="315" style="z-index: 2;" src="https://www.youtube.com/embed/mcdg8bcfSsg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 
 			<!--none-->
-			<video class="viscom-video" src="videos/User Experience @ VisCommerce.mp4" muted loop autoplay></video>
+
 
 		</section>
 
 		<section id="blur">
-			<h1 style="text-align: center; margin-top: 2%;">Why VisCommerce?</h1>
+			<h1 style="text-align: center; margin-top: 17%;">Why VisCommerce?</h1>
 			<div class="benefits-container" style="margin-bottom: 3%;">
 				<div class="box1" id="one">
-					<img src="images/Going up-cuate (2).png" alt="">
-					<h3>Grow <span>revenue</span>  by more than <span>100%</span> ?</h3>
+					<img src="images/Untitled design (3).png" alt="">
+					<h3>Grow <span>revenue</span> by more than <span>100%</span> ?</h3>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
 					<!-- <button style="max-width: 70%; margin: auto;" ><a href="#menu">More</a> </button> -->
-					<a href="#!" onclick="toggle()"><button style="max-width: 70%; margin: auto; display: flex; outline:none " >More</button></a>
+					<a href="#!" onclick="toggle()"><button
+							style="max-width: 70%; margin: auto; display: flex; outline:none ">More</button></a>
 				</div>
-				
+
 				<div class="box1" id="two">
-					<img src="images/benefits__1 (2).png" alt="">
-					<h3> Acquire <span>customers</span>  for <span>life</span> ?</h3>
+					<img src="images/benefits2.jpeg" alt="">
+					<h3> Acquire <span>customers</span> for <span>life</span> ?</h3>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
 					<!-- <button style="max-width: 70%; margin: auto;"><a href="#menu">More</a></button> -->
-					<a href="#!" onclick="toggle2()"><button style="max-width: 70%; margin: auto; display: flex; outline:none " >More</button></a>
+					<a href="#!" onclick="toggle2()"><button
+							style="max-width: 70%; margin: auto; display: flex; outline:none ">More</button></a>
 				</div>
 				<div class="box1" id="three">
 					<img src="images/benefits__1 (3).png" alt="">
-					<h3>  Sell <span>big-ticket</span>  items <span>easily</span> ?</h3>
+					<h3> Sell <span>big-ticket</span> items <span>easily</span> ?</h3>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-					<a href="#!" onclick="toggle3()"><button style="max-width: 70%; margin: auto; display: flex; outline:none " >More</button></a>
-				</div>	
+					<a href="#!" onclick="toggle3()"><button
+							style="max-width: 70%; margin: auto; display: flex; outline:none ">More</button></a>
+				</div>
 			</div>
 		</section>
 
 		<div class="generic-maincontainer" id="popup">
 			<div class="generic-container">
 				<img src="./images/Picture1.jpg" alt="">
-				<p>11 x the ratio of visitors who view 
-					3D models who buy compared to those who don’t. 
-					</p>
+				<p>11 x the ratio of visitors who view
+					3D models who buy compared to those who don’t.
+				</p>
 			</div>
 			<div class="generic-container">
 				<img src="./images/Picture4.png" alt="">
-				<p>Leveraging 3D and AR can increase conversion by up to 250%. 
-					</p>
+				<p>Leveraging 3D and AR can increase conversion by up to 250%.
+				</p>
 			</div>
 			<div class="generic-container">
 				<img src="./images/Picture3.jpg" alt="">
-				<p>We believe that 3D will be ubiquitous in the coming years. 
-					</p>
+				<p>We believe that 3D will be ubiquitous in the coming years.
+				</p>
 			</div>
-			<div class="close1"><a href="#!"  onclick="toggle()">Close</a></div>
-			
+			<div class="close1"><a href="#!" onclick="toggle()">Close</a></div>
+
 		</div>
 
 
@@ -115,25 +117,25 @@
 			<div class="generic-container">
 				<img src="./images/Picture5.jpg" alt="">
 				<p>Digital-twin via re-constructed 3D models used for interior-designing.
-					</p>
+				</p>
 			</div>
 			<div class="generic-container">
 				<img src="./images/Picture6.png" alt="">
-				<p>Digital-twin via re-constructed 3D models used for sales. 
-					</p>
+				<p>Digital-twin via re-constructed 3D models used for sales.
+				</p>
 			</div>
 			<div class="generic-container">
 				<img src="./images/Picture7.png" alt="">
-				<p>66% of consumers say content that isn’t personalized would stop them from making a purchase	. 
-					</p>
+				<p>66% of consumers say content that isn’t personalized would stop them from making a purchase .
+				</p>
 			</div>
 			<div class="generic-container">
 				<img src="./images/Picture8.png" alt="">
-				<p>84% of consumers say being treated like a person, is very important to winning their business. 
-					</p>
+				<p>84% of consumers say being treated like a person, is very important to winning their business.
+				</p>
 			</div>
 			<div class="close1"><a href="#!" onclick="toggle2()">Close</a></div>
-			
+
 		</div>
 
 
@@ -141,11 +143,11 @@
 		<div class="generic-maincontainer" id="popup3">
 			<div class="generic-container">
 				<img src="./images//Picture9.png" alt="">
-				<p>Customers who chat with a brand convert three times more often. 
-					</p>
+				<p>Customers who chat with a brand convert three times more often.
+				</p>
 			</div>
-			<div class="close1"><a href="#!"  onclick="toggle3()">Close</a></div>
-			
+			<div class="close1"><a href="#!" onclick="toggle3()">Close</a></div>
+
 		</div>
 
 
@@ -172,31 +174,26 @@
 						<!-- <p>feugiat amet tempus</p> -->
 					</header>
 				</article>
-				<article>
+				<article id="blur5">
 					<span class="image">
 						<img src="images/pic03.jpg" alt="" />
 					</span>
 					<header class="major">
-						<!-- <h3><a href="landing1.html" class="link">Magna</a></h3>
-						<p>Lorem etiam nullam</p> -->
-						<div class="video-container2">
+						<h3><a href="landing2.html" class="link">Demo</a></h3>
+						<!-- <p>Lorem etiam nullam</p> -->
 
-							<iframe id="yt-video2" width="560" height="315" src="https://www.youtube.com/embed/UzY1zunhZjI"
-								title="YouTube video player" frameborder="0"
-								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-								allowfullscreen></iframe>
-						</div>
 					</header>
-				</article> 
-				<article>
+				</article>
+				<article id="blur4">
 					<span class="image">
 						<img src="images/pic04.jpg" alt="" />
 					</span>
 					<header class="major">
-						<h3><a href="landing1.html" class="link">Ipsum</a></h3>
-						<p>Nisl sed aliquam</p>
+						<h3><a href="#!" onclick="toggle4()" >Patent</a></h3>
+						<!-- <p>Nisl sed aliquam</p> -->
 					</header>
 				</article>
+
 				<!-- <article>
 					<span class="image">
 						<img src="images/pic05.jpg" alt="" />
@@ -217,145 +214,166 @@
 				</article> -->
 			</section>
 
-			<!-- Two -->
-			<section id="two">
-				<div class="inner">
-					<header class="major">
-						<h2>Our Team</h2>
-					</header>
-					<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel"
-						aria-labelledby="headingOne">
-						<div class="panel-body">
-							<div class="team-box">
+		</div>
+		
+		<div>
+			<div class="patent-box" id="popup4">
+				<div class="patent-box1">
+					<ul>
+						<li>
+							Filed with USPTO (United States Patent Office).
+						</li>
+						<li>
+							Filed with Indian Patent Office.
+						</li>
+					</ul>
+				</div>
+				<div class="patent-box2">
+					<img style="max-width: 60%; " src="images/Simple Film Company Logo.svg" alt="">
+				</div>
+				<a href="#!" class="close2" onclick="toggle4()">Close</a>
+			</div>
+		</div>
 
-								<div class="team-wrapper">
-									<a class="card1 col-lg-3" href="#" style="width: 100%; height: 181px;">
-										<h3 class="team-text member1">Ramakrishna J Tumuluri</h3>
-										<p class="team-text member11">
-											Founder
-											<!-- <br> -->
-											<!-- 91-9885663163 -->
-										</p>
-										<div class="go-corner" href="#">
-											<div class="go-arrow">
-												→
-											</div>
-										</div>
-									</a>
-									<a class="card1" href="#" style="width: 100%; height: 181px;">
-										<h3 class="team-text">Gnan Sai</h3>
-										<p class="team-text" style="font-size: 20px;">3D Generalist</p>
-										<div class="go-corner" href="#">
-											<div class="go-arrow">
-												→
-											</div>
-										</div>
-									</a>
-									<a class="card1" href="#" style="width: 100%; height: 181px;">
-										<h3 class="team-text">Jeevan</h3>
-										<p class="team-text" style="font-size: 20px;">3D Content Developer</p>
-										<div class="go-corner" href="#">
-											<div class="go-arrow">
-												→
-											</div>
-										</div>
-									</a>
-									<a class="card1" id="c4" href="# " style="width: 100%; height: 181px;">
-										<h3 class="team-text">Nitish</h3>
-										<p class="team-text" style="font-size: 20px;">Student Intern</p>
-										<div class="go-corner" href="#">
-											<div class="go-arrow">
-												→
-											</div>
-										</div>
-									</a>
-								</div>
 
+		<!-- Two -->
+		<section id="two">
+			<div class="inner">
+				<header class="major">
+					<h2>Our Team</h2>
+				</header>
+				<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+					<div class="panel-body">
+						<div class="team-box">
+
+							<div class="team-wrapper">
+								<a class="card1 col-lg-3" href="#" style="width: 100%; height: 181px;">
+									<h3 class="team-text member1">Ramakrishna J Tumuluri</h3>
+									<p class="team-text member11">
+										Founder
+										<!-- <br> -->
+										<!-- 91-9885663163 -->
+									</p>
+									<div class="go-corner" href="#">
+										<div class="go-arrow">
+											→
+										</div>
+									</div>
+								</a>
+								<a class="card1" href="#" style="width: 100%; height: 181px;">
+									<h3 class="team-text">Gnan Sai</h3>
+									<p class="team-text" style="font-size: 20px;">3D Generalist</p>
+									<div class="go-corner" href="#">
+										<div class="go-arrow">
+											→
+										</div>
+									</div>
+								</a>
+								<a class="card1" href="#" style="width: 100%; height: 181px;">
+									<h3 class="team-text">Jeevan</h3>
+									<p class="team-text" style="font-size: 20px;">3D Content Developer</p>
+									<div class="go-corner" href="#">
+										<div class="go-arrow">
+											→
+										</div>
+									</div>
+								</a>
+								<a class="card1" id="c4" href="# " style="width: 100%; height: 181px;">
+									<h3 class="team-text">Nitish</h3>
+									<p class="team-text" style="font-size: 20px;">Student Intern</p>
+									<div class="go-corner" href="#">
+										<div class="go-arrow">
+											→
+										</div>
+									</div>
+								</a>
 							</div>
+
 						</div>
 					</div>
-					<!-- <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna
+				</div>
+				<!-- <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna
 						magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna.
 						Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem
 						consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus
 						amet pharetra et feugiat tempus.</p> -->
-					<!-- <ul class="actions">
+				<!-- <ul class="actions">
 						<li><a href="landing.html" class="button next">Get Started</a></li>
 					</ul> -->
-				</div>
-			</section>
-
-		</div>
-
-		<!-- Contact -->
-		<section id="contact">
-			<div class="inner">
-				<section>
-					<form method="post" action="#">
-						<div class="fields">
-							<div class="field half">
-								<label for="name">Name</label>
-								<input type="text" name="name" id="name" />
-							</div>
-							<div class="field half">
-								<label for="email">Email</label>
-								<input type="text" name="email" id="email" />
-							</div>
-							<div class="field">
-								<label for="message">Message</label>
-								<textarea name="message" id="message" rows="6"></textarea>
-							</div>
-						</div>
-						<ul class="actions">
-							<li><input type="submit" value="Send Message" class="primary" /></li>
-							<li><input type="reset" value="Clear" /></li>
-						</ul>
-					</form>
-				</section>
-				<section class="split">
-					<section>
-						<div class="contact-method">
-							<span class="icon solid alt fa-envelope"></span>
-							<h3>Email</h3>
-							<a href="#">information@untitled.tld</a>
-						</div>
-					</section>
-					<section>
-						<div class="contact-method">
-							<span class="icon solid alt fa-phone"></span>
-							<h3>Phone</h3>
-							<span>(000) 000-0000 x12387</span>
-						</div>
-					</section>
-					<section>
-						<div class="contact-method">
-							<span class="icon solid alt fa-home"></span>
-							<h3>Address</h3>
-							<span>1234 Somewhere Road #5432<br />
-								Nashville, TN 00000<br />
-								United States of America</span>
-						</div>
-					</section>
-				</section>
 			</div>
 		</section>
 
-		<!-- Footer -->
-		<footer id="footer">
-			<div class="inner">
-				<ul class="icons">
-					<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; Untitled</li>
-					<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</div>
-		</footer>
+	</div>
+
+	<!-- Contact -->
+	<section id="contact">
+		<div class="inner">
+			<section>
+				<form method="post" action="#">
+					<div class="fields">
+						<div class="field half">
+							<label for="name">Name</label>
+							<input type="text" name="name" id="name" />
+						</div>
+						<div class="field half">
+							<label for="email">Email</label>
+							<input type="text" name="email" id="email" />
+						</div>
+						<div class="field">
+							<label for="message">Message</label>
+							<textarea name="message" id="message" rows="6"></textarea>
+						</div>
+					</div>
+					<ul class="actions">
+						<li><input type="submit" value="Send Message" class="primary" /></li>
+						<li><input type="reset" value="Clear" /></li>
+					</ul>
+				</form>
+			</section>
+			<section class="split">
+				<section>
+					<div class="contact-method">
+						<span class="icon solid alt fa-envelope"></span>
+						<h3>Email</h3>
+						<a href="#">information@untitled.tld</a>
+					</div>
+				</section>
+				<section>
+					<div class="contact-method">
+						<span class="icon solid alt fa-phone"></span>
+						<h3>Phone</h3>
+						<span>(000) 000-0000 x12387</span>
+					</div>
+				</section>
+				<section>
+					<div class="contact-method">
+						<span class="icon solid alt fa-home"></span>
+						<h3>Address</h3>
+						<span>1234 Somewhere Road #5432<br />
+							Nashville, TN 00000<br />
+							United States of America</span>
+					</div>
+				</section>
+			</section>
+		</div>
+	</section>
+
+	<!-- Footer -->
+	<footer id="footer">
+		<div class="inner">
+			<ul class="icons">
+				<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+				<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+				<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+			</ul>
+			<ul class="copyright">
+				<li>&copy; Untitled</li>
+				<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</div>
+	</footer>
 
 	</div>
 
@@ -425,7 +443,7 @@
 			document.body.appendChild(css);
 		};
 
-		
+
 	</script>
 
 </body>
