--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -216,8 +216,8 @@
 
 		</div>
 		
-		<div>
-			<div class="patent-box" id="popup4">
+		<div class="patent-box-main-container" id="popup4">
+			<div class="patent-box" >
 				<div class="patent-box1">
 					<ul>
 						<li>
@@ -231,8 +231,9 @@
 				<div class="patent-box2">
 					<img style="max-width: 60%; " src="images/Simple Film Company Logo.svg" alt="">
 				</div>
-				<a href="#!" class="close2" onclick="toggle4()">Close</a>
+				
 			</div>
+			<a href="#!" class="close2" onclick="toggle4()">Close</a>
 		</div>
 
 
