--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -156,7 +156,7 @@
 
 			<!-- One -->
 			<section id="one" class="tiles">
-				<article>
+				<article id="blur7">
 					<span class="image">
 						<img src="images/pic01.jpg" alt="" />
 					</span>
@@ -165,7 +165,7 @@
 						<!-- <p>Ipsum dolor sit amet</p> -->
 					</header>
 				</article>
-				<article>
+				<article id="blur6">
 					<span class="image">
 						<img src="images/pic02.jpg" alt="" />
 					</span>
