--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -240,10 +240,20 @@
 		<!-- Two -->
 		<section id="two">
 			<div class="inner">
-				<header class="major">
+				<!-- <header class="major">
 					<h2>Our Team</h2>
-				</header>
-				<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+				</header> -->
+				
+				
+				<ul class="actions collapsed">
+						<li><a href="javascript:void(0)" class="button next" id="teambutton">OUR TEAM</a></li>
+				</ul>
+
+				<ul class="actions expanded">
+					<li><a href="javascript:void(0)" class="button next">OUR TEAM</a></li>
+				</ul>
+
+				<div id="collapseOne" class="panel-collapse collapse in expanded" role="tabpanel" aria-labelledby="headingOne">
 					<div class="panel-body">
 						<div class="team-box">
 
@@ -293,14 +303,6 @@
 						</div>
 					</div>
 				</div>
-				<!-- <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna
-						magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna.
-						Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem
-						consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus
-						amet pharetra et feugiat tempus.</p> -->
-				<!-- <ul class="actions">
-						<li><a href="landing.html" class="button next">Get Started</a></li>
-					</ul> -->
 			</div>
 		</section>
 
@@ -443,6 +445,16 @@
 			css.innerHTML = ".txt-rotate > .wrap { border-right: 0.08em solid #666 }";
 			document.body.appendChild(css);
 		};
+
+		$(document).ready(function () {
+			$(".expanded").hide();
+
+			$(".expanded a, .collapsed a").click(function (eve) {
+				var $container = $(this).parents("div");
+				eve.preventDefault();
+				$container.children(".expanded, .collapsed").toggle();
+			});
+		});
 
 
 	</script>
