--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -82,7 +82,7 @@
 							style="max-width: 70%; margin: auto; display: flex; outline:none ">More</button></a>
 				</div>
 				<div class="box1" id="three">
-					<img src="images/benefits__1 (3).png" alt="">
+					<img src="images/benefits3.jpeg" alt="">
 					<h3> Sell <span>big-ticket</span> items <span>easily</span> ?</h3>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
 					<a href="#!" onclick="toggle3()"><button
